--- a/chapter_tmcomposition.tex
+++ b/chapter_tmcomposition.tex
@@ -15,4 +15,5 @@ $p_{i,r}=\frac{a_{i,r}}{\underset{r}{\max}{(a_r)}}$
 
 $q_{i,r}=\frac{100·a_{i,r}}{a_i}$
 
-\section{Biophysicochemical differences in multi-pass and single-pass helices}
+\section{Results}
+\subsection{Biophysicochemical differences in multi-pass and single-pass helices}
