paragraphs on snorkeling and minor tweaks

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -28,13 +28,13 @@ The insertion and formation of the unusually orientated \gls{tmh}s and of the mo
 
 %Something about aysmetry, varies through the tree of life. "before we discuss the membrane proteins, one must consider the biological reason as for why they exist."
 %to do:  give specific examples of incredibly useful membrane protiens. Outline that MPs are vital for relaying information and chemistry across the membrane.
-The compartmentalisation of cellular biochemistry is arguably one of the most significant events to have occurred in evolution, and is certainly one of the fundamental prerequisites for life \cite{Koshland2002}. The proteins that allow life to use this biochemical barrier are perhaps equally important. Together, the lipid bilayer and proteins therein allow complex biochemical systems to be employed.
+The compartmentalisation of cellular biochemistry is arguably one of the most significant events to have occurred in evolution, and is certainly one of the fundamental prerequisites for life \cite{Koshland2002}.  The proteins that allow life to use this biochemical barrier are perhaps equally important. Together, the lipid bilayer and proteins therein allow complex biochemical systems to exist.
 
-It is critical to understand that the lipid bilayer and the transmembrane $\alpha$ helices are inextricably linked, and often what we observe from the $\alpha$ helices reflect the properties of the much harder to study membranes. The lipid membranes influence the local structure, dynamics, and activity of proteins in the membrane in non-trivial ways \cite{Bondar2010, Bondar2009, Jardon-Valadez2010, Kalvodova2005, Urban2005, White2001, Jensen2004}. %Add references about the hydrogen bonds (white2005 and another one...)
+It is critical to understand that the lipid bilayer and the transmembrane $\alpha$ helices are inextricably linked, and often what we observe from the $\alpha$ helices reflect the properties of the much harder to study membranes. The lipid membranes influence the local structure, dynamics, and activity of proteins in the membrane in non-trivial ways \cite{Bondar2010, Bondar2009, Jardon-Valadez2010, Kalvodova2005, Urban2005, White2001, Jensen2004, Henin2014}.%Henin2014. %Add references about the hydrogen bonds (white2005 and another one...)
 
 It has been known for some time that the outer membranes of Gram negative bacteria are asymentric in terms of lipid composition. The outer membranes contain lipopolysccharide, whilst the inner is a mixture of approximately 25 phospholipid types. Adding to the membrane asymmetry composition story, a thorough analysis of residue composition in yeast and human \gls{tmh} regions revealed intra-membrane leaflet composition asymetry in the \gls{er}, but not the Golgi \cite{Sharpe2010}. Furthermore protein\-lipid interactions have been shown to be determinants of membrane curvature \cite{Jensen2004}, and undertake complex orientations and conformations to allow for hydrophobic mismatch \cite{Planque2003}. %the planque reference is messed up. It may need changing with every bib.tex update unless the permannet record is changed.
 
-There is a rich variety of lipid molecules that make up the biological membranes. The majority of lipids in the membrane are phospholipids. These are composed of a glycerol molecule. Bonded to the glycerol molecule are two hydrophobic fatty acid tail groups, and a negatively-charged polar phosphate group. The polar phosphate group is modeified with an alcohol group. Water entropicly drives the self association of the lipid molecules. In other words the bilayer forms from these phospholipid molecules due to the fierce dissociation between the polar water and the hydrophobic tails. Furthermore the bilayer maximises van der Waals interactions between the closely-packed hydrocarbon chains, which contributes to the stability of the bilayer. This can be seen even in relatively early \gls{md} simulations \cite{Goetz1998}.
+There is a rich variety of lipid molecules that make up the biological membranes. The majority of lipids in higher organism membranes are phospholipids, sphingolipids, and sterols. These are composed of a glycerol molecule. Bonded to the glycerol molecule are two hydrophobic fatty acid tail groups, and a negatively-charged polar phosphate group. The polar phosphate group is modeified with an alcohol group. Water entropicly drives the self association of the lipid molecules. In other words the bilayer forms from these phospholipid molecules due to the fierce dissociation between the polar water and the hydrophobic tails. Furthermore the bilayer maximises van der Waals interactions between the closely-packed hydrocarbon chains, which contributes to the stability of the bilayer. This can be seen even in relatively early \gls{md} simulations \cite{Goetz1998}.
 
 \section{$\alpha$ Helices in Membranes }
 \subsection{Transmembrane Helix Sequence Composition}
@@ -76,6 +76,10 @@ Two publications by von Heijne coined the ``Positive-Inside'' rule demonstrated 
 
 \subsection{Snorkeling}
 
+%It is tempting to consider all TMHs as hydrophobic entities. But this is not entirely true. Except for the obligatory hydrophobic amino acids, a TMH might also contain some polar amino acids, or even one or more charged residues. This is possible, at least in part, due to the snorkel effect [86-88]. This means that a side chain of a charged residue that is buried within the hydrophobic membrane core can adjust its conformation such that it reaches, or snorkels, toward the interfacial or aqueous regions. Snorkeling residues thus seem to experience a force that pushes them away from the membrane core. In contrast, some amino acids (in particular the hydrophobic ones) are subject to an anti-snorkeling effect, where the side-chains instead point toward the hydrophobic core. As a consequence, the precise positioning and orientation of a TMH in the membrane is influenced by snorkeling residues, which interact with different parts of the lipid bilayer.
+
+Broadly speaking, transmembrane helices are non-polar. However some contain polar and  charged residues in the helix itself. Whilst this might seem thermodynamically unstable at first glance, a molecular dynamic feature called the ``snorkel'' effect explains in part how this is possible \cite{Chamberlain2004, Strandberg2003}. Simply put, the snorkelling effect involves the long flexible side chain of leucine reaching the water interface region even when the $\alpha$ helix backbone is pulled into the hydrophobic layer. This has also been suggested to allow helices to adapt to varying thicknesses of the membrane \cite{Kandasamy2006}.
+
 \section{Biogenesis of Transmembrane Proteins}
 %Depth of secretion pathway (talk about translocons in depth here) & outline post-translational insertion
 \subsection{Translocation}
@@ -87,7 +91,7 @@ Tail anchored proteins are a topologically distinct class of intracellular prote
 
 Notably, known \gls{snare} transmembrane helices are highly hydrophobic even compared to other tail anchored transmembrane helices.
 
-\subsection{Spontaneous membrane insertion}
+\subsection{Translocon Independent Membrane Insertion}
 %move on to case studies involving spontaneous insertion?
 Signal anchored proteins, proteins that contain a single hydrophobic segment that serves as both a mitochondrial targeting signal and a membrane anchor, as well as tail anchored proteins have been shown to be able to spontaneously insert into the membrane indepently from the translocon \cite{Elisa2012, Lan2000, Colombo2009}.
 
