--- a/chapter_predictfunction.tex
+++ b/chapter_predictfunction.tex
@@ -1,5 +1,5 @@
 
-\chapter{The good, the bad, and the ugly helices} %Perhaps this will be for a later date!
+\chapter{The Good, the Gad, and the Ugly Helices} %Perhaps this will be for a later date!
 \section{Abstract}
 \section{Introduction}
 \section{Methods}
